# rpi-fan-control

./: .gitignore  Cargo.toml  README.md  build.sh  default.nix  deploy_service.sh  example_configuration.toml  main.c  monitor_temp.service  monitor_temp.timer  service.nix
data/: analysis.ipynb
src/: config.rs  fan.rs  main.rs  temperature.rs
